--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "windows": "npx @react-native-community/cli run-windows"
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-windows": "0.78.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -27,13 +31,22 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "@types/ws": "^8.18.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.81.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "react-native-windows": {
+    "init-windows": {
+      "name": "fonestarpoc",
+      "namespace": "fonestarpoc",
+      "template": "old/uwp-cpp-app"
+    }
   }
 }
